--- a/web/color.css
+++ b/web/color.css
@@ -1,9 +1,29 @@
 body{
-    width: 900PX;
+    
     margin: auto;
-    background-color: buttonface;
-    border: dotted;
+    background-color: black;
+    background-image: url(fondo.jpg);
+    background-size: 100% 119%;
+    background-repeat: no-repeat;
+    background-position: center;
     animation: alternate;
-    box-shadow: appworkspace;
    
+   
+   
+}
+h1{
+     -webkit-text-stroke: 2px black;
+ font-family: arial; color: white;
+}
+
+p{
+    font-size: 180%;
+    -webkit-text-stroke: 1px black;
+ font-family: arial; color: white;
+}
+h5{
+    color: white;
+}
+select{
+    font-size: 70%;
 }
